# boto-ext-qbusiness-chat-stream

./: .gitignore  LICENSE.md  README.md  pyproject.toml  q_stream_client.py  setup.py
q-stream-rs/: Cargo.toml  pyproject.toml
q-stream-rs/src/: lib.rs  output.rs
src/boto_ext_qbusiness_chat_stream/: __init__.py  __main__.py  q_client_ext.py
src/pyo3-q-stream/: Cargo.toml  pyproject.toml
src/pyo3-q-stream/src/: lib.rs
