[project]
name = "boto-ext-qbusiness-chat-stream"
version = "0.0.2"
authors = [
    { name="jeregist" },
]
license = { file = "LICENSE.md" }
description = "An extension of boto3 qbusiness client that adds chat streaming using the rust SDK with pyo3."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "boto3",
    "q-stream-rs @ {root:uri}/q-stream-rs"
]

#[build-system]
#requires = ["maturin>=1.8,<2.0"]
#build-backend = "maturin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
#
#[tool.hatch.envs.default]
#dependencies = [
#    { path = "../q-stream-rs" }
#]

#[tool.poetry.dependencies]
#q-stream-rs = { path = "q-stream-rs", develop = true}
#
#
#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"

[tool.hatch.envs.default]
dependencies = [
    "maturin",  # Only needed for development
    "hatch"
]

[project.urls]
Homepage = "https://github.com/jregistr/boto-ext-qbusiness-chat-stream"
Issues = "https://github.com/jregistr/boto-ext-qbusiness-chat-stream/issues"
