[package]
name = "q-stream-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "q_stream_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
pyo3-async-runtimes = { version = "0.23.0", features = ["attributes", "tokio-runtime"] }
futures-util = "0.3.31"
tokio = { version = "1.44.0", features = ["full"] }
aws-config = {version = "1.5.18", features = ["behavior-version-latest"]}
aws-sdk-qbusiness = "1.72.0"
